Fix search input alignment on small screens
After removing DfE styles for search, the search button was stretching to half of the width of the search input on smaller screens - removing space for entering text.

This change fixes that, as well as the alignment of the search icon inside the button.

--- a/DfE.FindInformationAcademiesTrusts/assets/sass/components/_search.scss
+++ b/DfE.FindInformationAcademiesTrusts/assets/sass/components/_search.scss
@@ -44,6 +44,7 @@
     display: flex;
     gap: 10px;
     height: 3rem;
+    width: unset;
   }
 
   .app-search__icon {
@@ -80,12 +81,6 @@
     .app-search__icon {
       fill: govuk-colour("white");
     }
-  }
-}
-
-@media (width <=40.0525em) {
-  .app-search__button {
-    padding: 0 8px;
   }
 }
 
